--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL_DEV=http://localhost:8000/api
+VITE_API_BASE_URL_DEV=http://192.168.29.188:8000/api
 VITE_API_BASE_URL_PROD=https://saptavidhi-vendor-api.onrender.com/api
