--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     },
     "dependencies": {
         "country-state-city": "^3.2.1",
+        "fortawesome": "^0.0.1-security",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.23.1",
+        "react-slick": "^0.30.2",
+        "react-toastify": "^10.0.5",
         "swiper": "^11.1.4"
     },
     "devDependencies": {
