--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dependencies": {
         "country-state-city": "^3.2.1",
         "fortawesome": "^0.0.1-security",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^2.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.2.1",
