completed banquet form

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_API_BASE_URL_DEV=http://172.30.80.1:8000/api
 VITE_API_BASE_URL_PROD=https://saptavidhi-vendor-api.onrender.com/api
 
-VITE_IMAGE_URL_DEV=http://172.30.80.1:8000/uploads
-VITE_IMAGE_URL_PROD=https://saptavidhi-vendor-api.onrender.com/uploads
+VITE_IMAGE_URL_DEV=http://172.30.80.1:8000
+VITE_IMAGE_URL_PROD=https://saptavidhi-vendor-api.onrender.com
