--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/material": "^5.15.20",
         "country-state-city": "^3.2.1",
         "fortawesome": "^0.0.1-security",
         "html2canvas": "^1.4.1",
