--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^42.0.0",
+        "@ckeditor/ckeditor5-react": "^8.0.0",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@mui/material": "^5.15.20",
+        "@tailwindcss/typography": "^0.5.13",
+        "ckeditor5": "^42.0.0",
         "country-state-city": "^3.2.1",
         "fortawesome": "^0.0.1-security",
         "html2canvas": "^1.4.1",
