--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-VITE_API_BASE_URL_DEV=http://192.168.92.161:8000/api
+# VITE_API_BASE_URL_DEV=https://saptavidhi-vendor-api.onrender.com/api
+VITE_API_BASE_URL_DEV=http://127.0.0.1:8000/api
 VITE_API_BASE_URL_PROD=https://saptavidhi-vendor-api.onrender.com/api
 
-VITE_IMAGE_URL_DEV=http://192.168.92.161:8000
+# VITE_IMAGE_URL_DEV=https://saptavidhi-vendor-api.onrender.com
+VITE_IMAGE_URL_DEV=http://127.0.0.1:8000
 VITE_IMAGE_URL_PROD=https://saptavidhi-vendor-api.onrender.com
